# AnalysisDataFlow

./: .dockerignore  .gitignore  00-GLOBAL-KNOWLEDGE-GRAPH.md  00.md  100-PERCENT-COMPLETION-CERTIFICATE-v4.2.md  100-PERCENT-COMPLETION-CERTIFICATE.md  100-PERCENT-COMPLETION-FINAL-REPORT.md  100-PERCENT-COMPLETION-MASTER-PLAN.md  100-PERCENT-v4.2-alpha-2-STATUS.md  100P-COMPLETION-FINAL-REPORT-v3.0.md  2026-Q2-PARALLEL-COMPLETION-REPORT.md  2026-Q2-PARALLEL-EXECUTION-PLAN.md  2026-Q3-AI-FOR-STREAMING-COMPLETION-REPORT.md  2026-Q3-AI-FOR-STREAMING-EXECUTION-PLAN.md  30-AGENTS-FULL-COMPLETION-REPORT.md  ABSOLUTE-100-PERCENT-COMPLETION.md  ACADEMIC-FRONTIER-GAP-ANALYSIS.md  ACADEMIC-OUTREACH-EXECUTION-REPORT.md  ACHIEVEMENTS-SHOWCASE.md  ACKNOWLEDGMENTS-DETAILED.md  ADMIN-QUICKSTART.md  ADVISORY-BOARD-CHARTER.md  AGENTS.md  AI-STREAMING-RESEARCH-REPORT-2024-2025.md  ALGOLIA-DOCSEARCH-APPLICATION.md  ARCHITECTURE.md  ARCHIVE-LINK-SUGGESTIONS.md  AUDIT-ISSUES.md  AUDIT-PROSPECTIVE-CONTENT-REPORT.md  AUTOMATION-TOOLKIT-README.md  BENCHMARK-EXECUTION-PLAN-v4.1.md  BENCHMARK-READY-CHECKLIST.md  BENCHMARK-REPORT.md  BENCHMARK-RESULT-v4.1.md  BEST-PRACTICES-COMPLETE.md  BEST-PRACTICES.md  BROKEN-LINK-FIX-REPORT.md  BROKEN-LINKS-TODO.md  CASE-STUDIES-INDEX.md  CASE-STUDIES.md  (+566 more)
.cache/: arroyo-news-cache.json  kg-cache.json
.github/: DISCUSSIONS-SETUP-GUIDE.md  PULL_REQUEST_TEMPLATE.md  labels.yml  (+1 more)
Flink/07-rust-native/iron-functions/verify-examples/: Cargo.toml  README.md
Flink/07-rust-native/iron-functions/verify-examples/src/: lib.rs
Knowledge/Flink-Scala-Rust-Comprehensive/performance-tests/wasm/rust/: Cargo.toml
Knowledge/Flink-Scala-Rust-Comprehensive/performance-tests/wasm/rust/src/: native.rs
release/v3.0.0/docs/Knowledge/Flink-Scala-Rust-Comprehensive/performance-tests/simd/rust/: Cargo.toml
release/v3.0.0/docs/Knowledge/Flink-Scala-Rust-Comprehensive/performance-tests/simd/rust/benches/: vectorized_filter.rs
release/v3.0.0/docs/Knowledge/Flink-Scala-Rust-Comprehensive/performance-tests/simd/rust/src/: simd_avx2.rs
(+5311 files in other folders)
