[package]
name = "wasm-udf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "serde"]
native = []

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = ["console"]

[dev-dependencies]
wasmi = "0.31"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "wasm_overhead"
harness = false
