[package]
name = "simd-benchmarks"
version = "0.1.0"
edition = "2021"
description = "SIMD vectorization benchmarks for stream processing"

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
rand_distr = "0.4"

[features]
default = []

[[bench]]
name = "vectorized_filter"
harness = false

[[bench]]
name = "vectorized_aggregate"
harness = false

[[bench]]
name = "vectorized_map"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
